syntax = "proto3";

package com.jaf.proto;

option java_package = "com.jaf.proto";
option java_outer_classname = "CoverageProto";

message SubscribeRequest {}

message CoverageEvent {
  string request_id = 1;
  bool has_new_coverage = 2;
}

service CoverageService {
  rpc Subscribe(SubscribeRequest) returns (stream CoverageEvent);
}
